<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Widget.App.NestedScroll">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etTitle"
            android:hint="@string/title_e_g_linear_algebra"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Title" />

        <EditText
            android:id="@+id/etLocation"
            android:hint="@string/location_optional"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints="location"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <Button
                android:id="@+id/btnStartTime"
                android:text="@string/start_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnEndTime"
                android:text="@string/end_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <EditText
            android:id="@+id/etReminder"
            android:hint="@string/reminder_minutes_before_e_g_10"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints="10" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>