<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="zhang.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/item_course" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="zhang.myapplication.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="zhang.myapplication.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <!-- Settings fragment -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="zhang.myapplication.ui.settings.SettingsFragmentOriginal"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Global action -->
    <action
        android:id="@+id/action_global_settingsFragment"
        app:destination="@id/settingsFragment"
        app:popUpTo="@id/navigation_home"
        app:popUpToInclusive="false" />
</navigation>